2009-04-30  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Handle deletion of referenced menu items and modules by
	understandable error message.

2009-04-06  Tomas Cerha  <cerha@debian.brailcom.xx>

	* lib/pytis/extensions/cms/web.py: 
	Allow overriding condition for menu item selection.

2009-04-02  Tomas Cerha  <cerha@debian.brailcom.xx>

	* lib/pytis/extensions/cms/web.py:
	Make `view' the only possible action of `Menu' module and leave
	the `action' argument for the use of the embedded module.

2009-04-01  Tomas Cerha  <cerha@debian.brailcom.xx>

	* lib/pytis/extensions/cms/cms.py:
	Added field `system_role' into `UserRoles'.

2009-03-31  Tomas Cerha  <cerha@debian.brailcom.xx>

	* lib/pytis/extensions/cms/web.py: 
	(EmbeddablePytisModule): Use specification title by default.

	* lib/pytis/extensions/cms/cms.py:
	(Users.fields): Define as a method.

2009-03-30  Tomas Cerha  <cerha@debian.brailcom.xx>

	* lib/pytis/extensions/cms/cms.py: 
	* lib/pytis/extensions/cms/web.py:
	Added support for distinction of logged in and anonymous users.
	Refer to `uid', not `login' form session.  Wrap all module
	references by `_spec_name()'.  Added (unused) session log module.

	* db/db_pytis_cms.py: 
	Added session and session log support.  Allow configurable user
	table.  Added dependencies.

2009-03-20  Tomas Cerha  <cerha@debian.brailcom.xx>

	* db/db_pytis_cms.py:
	* lib/pytis/extensions/cms/cms.py: 
	* lib/pytis/extensions/cms/web.py: 
	Added support for system roles.

2009-03-17  Tomas Cerha  <cerha@debian.brailcom.xx>

	* lib/pytis/extensions/cms/__init__.py: 
	Added documentation.

	* lib/pytis/extensions/cms/web.py:
	Implemented authentication/authorization and session management.

2009-03-10  Tomas Cerha  <cerha@debian.brailcom.xx>

	* lib/pytis/extensions/cms/cms.py:
	Use `_cbname()' also in `UserRoles'.

	* db/db_pytis_cms.py:
	Added Wiking session support.

2009-03-09  Milan Zamazal  <pdm@brailcom.org>

	* ev/null: